--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,10 @@
 			<version>1.10-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sethbling.blingjeweled</groupId>
+			<artifactId>BlingJeweled</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 </project>
